"base.app_version" = "App version";
"base.build_number" = "Build number";
"base.rootFolder" = "None";
"base.allItems" = "All items";
"base.unreadItems" = "Unread items";
"base.starredItems" = "Starred items";
"base.actionCancel" = "Cancel";
"base.actionDone" = "Done";
"base.actionRemove" = "Remove";
"base.actionEdit" = "Edit";
"rssEditView.feedDetails" = "Feed Details";
"rssEditView.specifyFolder" = "Specify Folder";
"rssEditView.namePlaceholder" = "Name";
"rssEditView.linkPlaceholder" = "http://";
"rssEditView.addFolder" = "Add a new Folder";
"rssEditView.addFolderTitle" = "Create folder";
"rssEditView.folderNamePlaceholder" = "Folder name";
"rssEditView.folderLabel" = "Folder:";
"rssEditView.titleUpdate" = "Edit RSS feed";
"rssEditView.titleCreate" = "Add RSS feed";
"error.internetUnreachable" = "Internet is unreachable. Please try updating later.";
"itemTableView.baseTitle" = "RSSFeed reader";
"itemTableView.folderNamePlaceholder" = "Folder name";
"itemTableView.editFolderTitle" = "Edit folder";