...
        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PullToRefreshView" customModule="IOSSemestralWork" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Updated x min ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRo-cq-Bf6">
                    <rect key="frame" x="115.5" y="55.5" width="144.5" height="21"/>
                    <accessibility key="accessibilityConfiguration" identifier="PullToRefresh_UpdateLabel"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="7G2-pA-8c9">
                    <rect key="frame" x="79.5" y="56" width="20" height="20"/>
...
