...
        
        let tableView = UITableView(frame: self.view.bounds, style: UITableView.Style.plain)
        tableView.dataSource = self
        tableView.delegate = self
        tableView.estimatedRowHeight = 120
        tableView.rowHeight = UITableView.automaticDimension
        tableView.accessibilityIdentifier = "RSSItemsTableVC_TableView"
        
        // Initialize PullToRefresh
        tableView.refreshControl = refresher
        
        tableView.register(RssItemCell.self, forCellReuseIdentifier: "RssItemCell")
        view.addSubview(tableView)
...
